@@ -1,0 +1,68 @@
+.\"	$NetBSD: iteide.4,v 1.1 2004/12/01 22:27:45 grant Exp $
+.\"
+.\" Copyright (c) 2004 Grant Beattie.
+.\"
+.\" Redistribution and use in source and binary forms, with or without
+.\" modification, are permitted provided that the following conditions
+.\" are met:
+.\" 1. Redistributions of source code must retain the above copyright
+.\"    notice, this list of conditions and the following disclaimer.
+.\" 2. Redistributions in binary form must reproduce the above copyright
+.\"    notice, this list of conditions and the following disclaimer in the
+.\"    documentation and/or other materials provided with the distribution.
+.\" 3. The name of the author may not be used to endorse or promote products
+.\"    derived from this software without specific prior written permission.
+.\"
+.\" THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+.\" IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+.\" OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+.\" IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+.\" INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+.\" NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+.\" DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+.\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+.\" INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+.\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+.\"
+.Dd November 30, 2004
+.Dt ITEIDE 4
+.Os
+.Sh NAME
+.Nm iteide
+.Nd Integrated Technology Express IDE disk controllers driver
+.Sh SYNOPSIS
+.Cd "iteide* at pci? dev ? function ? flags 0x0000"
+.Sh DESCRIPTION
+The
+.Nm
+driver supports the IT8212 IDE controller which is found on some
+Gigabyte motherboards (as
+.Dq GigaRAID )
+and some PCI cards.
+This driver provides the interface with the hardware for the
+.Xr ata 4
+driver.
+.Pp
+The optional RAID functionality of the IT8212 is not supported and
+is explicitly disabled by the
+.Nm
+driver.
+The controller will act like a regular IDE controller with no RAID
+functionality.
+.Sh SEE ALSO
+.Xr ata 4 ,
+.Xr atapi 4 ,
+.Xr intro 4 ,
+.Xr pci 4 ,
+.Xr pciide 4 ,
+.Xr wd 4 ,
+.Xr wdc 4
+.Sh AUTHORS
+The
+.Nm
+driver was written by
+.An Alexander Yurchenko Aq grange@openbsd.org
+and ported to
+.Ox
+by
+.An Grant Beattie Aq grant@NetBSD.org .
